--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
             <div class="title_filter main_flex__nowrap flex__jcontent_start flex__align-items_center">
                 PRICE RANGE
             </div>
-            <div class="div content_filter">
+            <div class="content_filter padding-box">
                <div id="slider_price"></div>
                 <div class="price_box main_flex__nowrap flex__jcontent_between flex__align-items_center">
                     <input type="text" name="minPrice" value="">
